@@ -392,7 +392,7 @@ int mosquitto_opts_set(struct mosquitto *mosq, enum mosq_opt_t option, void *val
 #ifdef WITH_TLS
 			mosq->ssl_ctx = (SSL_CTX *)value;
 			if(mosq->ssl_ctx){
-#if (OPENSSL_VERSION_NUMBER >= 0x10100000L) && !defined(LIBRESSL_VERSION_NUMBER)
+#if (OPENSSL_VERSION_NUMBER >= 0x10100000L)
 				SSL_CTX_up_ref(mosq->ssl_ctx);
 #else
 				CRYPTO_add(&(mosq->ssl_ctx)->references, 1, CRYPTO_LOCK_SSL_CTX);
@@ -500,7 +500,7 @@ int mosquitto_void_option(struct mosquitto *mosq, enum mosq_opt_t option, void *
 #ifdef WITH_TLS
 			mosq->ssl_ctx = (SSL_CTX *)value;
 			if(mosq->ssl_ctx){
-#if (OPENSSL_VERSION_NUMBER >= 0x10100000L) && !defined(LIBRESSL_VERSION_NUMBER)
+#if (OPENSSL_VERSION_NUMBER >= 0x10100000L)
 				SSL_CTX_up_ref(mosq->ssl_ctx);
 #else
 				CRYPTO_add(&(mosq->ssl_ctx)->references, 1, CRYPTO_LOCK_SSL_CTX);
