@@ -46,6 +46,9 @@ Clients:
 
 Build:
 - Fix installation using WITH_TLS=no. Closes #2281.
+- Fix builds with libressl 3.4.0. Closes #2198.
+- Remove some unnecessary code guards related to libressl.
+
 
 2.0.11 - 2021-06-08
 ===================
